# Clauge

./: .gitignore  .mcp.json  CLA.md  LICENSE  README.md  package.json  register-scheme.sh  vite.config.ts
.claude/workflows/: reasonix-review.js  reasonix-task.js
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-release.yml  create-release.yml  publish.yml  test-build.yml  test-bundle.yml
docs/: changelog.html  index.html  style.css
docs/superpowers/plans/: 2026-06-05-vscode-embedded.md
docs/superpowers/specs/: 2026-06-03-vscode-embedded-design.md  2026-06-09-antigravity-provider-design.md
scripts/: bump-version.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  Clauge.desktop  com.clauge.desktop.metainfo.xml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 10_ssh_profiles_allow_interactive_auth.sql  11_create_workspace_tables.sql  12_agent_sessions_extensions.sql  13_workspace_dismissed_externals.sql  14_agent_sessions_provider.sql  15_ai_configurations_and_coworker_disable.sql  16_workspace_board_columns_rename.sql  17_agent_sessions_binary_path.sql  1_create_initial_schema.sql  2_add_direct_connection_to_nosql.sql  3_create_ai_usage_table.sql  4_create_agent_tables.sql  5_ssh_profiles_and_known_hosts.sql  6_ssh_tunnel_support_for_db_connections.sql  7_ssh_profiles_allow_agent_auth.sql  8_explorer_connections.sql  9_ssh_profiles_proxy_support.sql
src-tauri/scripts/: fetch_usage.swift
src-tauri/src/: lib.rs  sessions.rs
src-tauri/src/appearance/: mod.rs  vibrancy.rs  window_chrome.rs
src-tauri/src/cloud/: ai.rs  auth.rs  billing.rs  client.rs  commands.rs  config.rs  credentials_probe.rs  mod.rs  models.rs  pro_state.rs  scheduler.rs  sync.rs
src-tauri/src/cloud/domains/: agent.rs  coworkers.rs  explorer.rs  mod.rs  nosql.rs  rest.rs  sql.rs  ssh.rs  util.rs
src-tauri/src/commands/: agent_terminal.rs  logs.rs  mod.rs  settings.rs  sql_client.rs
src-tauri/src/commands/ai/: anthropic.rs  mod.rs  openai.rs  tools.rs
src-tauri/src/db/: bootstrap.rs  legacy_import.rs  migrator.rs  mod.rs  models.rs  pool.rs
src-tauri/src/github/: gist.rs
src-tauri/src/modes/: mod.rs
src-tauri/src/modes/agent/: commands.rs  git.rs  models.rs  plugins.rs  terminal.rs  usage.rs  worktree.rs
src-tauri/src/modes/editor/: server.rs
src-tauri/src/modes/explorer/: ai_tools.rs  connections.rs  fs.rs  mod.rs  models.rs  session.rs  transfers.rs
src-tauri/src/modes/explorer/backends/: azure_blob.rs  ftp.rs  mod.rs  s3.rs  s3_presets.rs  sftp.rs
src-tauri/src/modes/nosql/: ai_tools.rs  client.rs  mod.rs
src-tauri/src/modes/rest/: ai_tools.rs  collections.rs  environments.rs  history.rs  http_executor.rs  import_export.rs  mod.rs  requests.rs
src-tauri/src/modes/sql/: ai_tools.rs  clickhouse_client.rs  client.rs  d1_client.rs  dialects.rs  mod.rs
src-tauri/src/modes/ssh/: agent.rs  ai_tools.rs  config_import.rs  mod.rs  models.rs  profiles.rs  ssh_session.rs  terminal.rs  tunnel.rs
src-tauri/src/modes/workspace/: agent_spawn.rs  cli_errors.rs  commands.rs  mod.rs  models.rs  pr.rs  push.rs
src-tauri/src/modes/workspace/mcp/: actor.rs  dispatch.rs  mod.rs  server.rs  tools.rs
src-tauri/src/shared/: app_config.rs  logger.rs  mod.rs
src-tauri/src/shared/ai/: dispatch.rs  mod.rs  providers.rs  types.rs  usage.rs
src-tauri/src/shared/ai/clients/: anthropic.rs  openai.rs
src-tauri/src/shared/cli/: antigravity.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  registry.rs  runner.rs
src-tauri/src/shared/http/: mod.rs
src-tauri/src/shared/platform/: credential_store.rs  install_type.rs  linux_file_store.rs  mod.rs  path.rs  shell.rs
src-tauri/src/shared/repos/: ai_usage.rs  collections.rs  coworkers.rs  environments.rs  explorer.rs  history.rs  mod.rs  nosql_connections.rs  requests.rs  sessions.rs  settings.rs  sql_connections.rs  ssh_profiles.rs  workspaces.rs
src-tauri/src/shared/updater/: channel.rs  commands.rs  mod.rs  state.rs
src-tauri/src/telemetry/: counters.rs  device.rs  mod.rs  payload.rs  scheduler.rs
src/lib/commands/: agent.ts  ai.ts  cloud.ts  index.ts  logs.ts
src/lib/components/: ContextMenu.svelte  EditSessionModal.svelte  NewSessionModal.svelte  RestoreNotice.svelte  Sidebar.svelte  Terminal.svelte
src/lib/components/agent/: AgentNav.svelte  AgentPanel.svelte
src/lib/components/ai/: AIConfigSelector.svelte  AIPanel.svelte  AIPanel.svelte.css
src/lib/components/cloud/: ConflictResolverModal.svelte  UpgradeModal.svelte  WelcomeProModal.svelte
src/lib/components/effects/: CatsParade.svelte  Embers.svelte  PetalFall.svelte  Starfield.svelte
src/lib/components/env/: EnvManagerModal.svelte  EnvVarTable.svelte
src/lib/components/github/: GitHubConnect.svelte
src/lib/components/nav/: CollectionItem.svelte  HistoryPanel.svelte  InlineInput.svelte  NavPanel.svelte  RequestItem.svelte  RestNav.svelte
src/lib/components/onboarding/: Onboarding.svelte
src/lib/components/settings/: AccountTabContent.svelte  ClaugeAIBalance.svelte  SettingsModal.svelte  SettingsModal.svelte.css
src/lib/components/sidebar/: Avatar.svelte  GetProButton.svelte  Sidebar.svelte  SidebarButton.svelte
src/lib/components/statusbar/: StatusBar.svelte
src/lib/components/topbar/: EnvPill.svelte  Topbar.svelte
src/lib/modes/agent/: commands.ts  stores.ts  types.ts
src/lib/modes/editor/: commands.ts  stores.ts
src/lib/modes/explorer/: commands.ts  index.ts  stores.ts  tabkey.ts  types.ts
src/lib/modes/nosql/: commands.ts  index.ts  stores.ts  types.ts
src/lib/modes/rest/: commands.ts  index.ts  stores.ts  types.ts
src/lib/services/: ai-chat.ts
src/lib/stores/: app.ts  cloud.ts  drag.ts  index.ts  missingCredentials.ts
src/lib/types/: agent.ts  ai.ts  index.ts  settings.ts
src/lib/utils/: errors.ts  log.ts  platform.ts  shortcuts.ts  tabActivation.ts  theme.ts  updater.ts
src/routes/: +layout.svelte  +page.svelte
(+130 files in other folders)
