[package]
name = "app"
version = "3.0.0-alpha.1"
description = "Clauge — A modern REST API client"
authors = ["ansxuman"]
license = "BUSL-1.1"
repository = "https://github.com/ansxuman/Clauge"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "json", "native-tls", "stream", "multipart"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "tls-rustls", "chrono", "uuid", "json", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
mime_guess = "2"
mongodb = "3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
portable-pty = "0.9.0"
parking_lot = "0.12"
base64 = "0.22"
dirs = "5"
tauri-plugin-notification = "2"
# SSH client (pure-Rust, cross-platform)
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
sha2 = "0.10"
# Cross-platform credential store (macOS Keychain / Windows Credential Manager / Linux Secret Service)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
window-vibrancy = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.7"
